Fixed: Update buttons now showing on every change. Fixed: z-index issue with start/end date input boxes. Fixed: Datepicker now also shows when calendar icon is clicked. Change: Featured Course widget now uses [course_media] not [course_thumbnail]. Added: Featured Course shortcode [course_featured] Updated: Course Structure widget now "course aware". Updated: Course Calendar widget now "course aware".

--- a/css/admin_coursepress_page_course_details.css
+++ b/css/admin_coursepress_page_course_details.css
@@ -2044,7 +2044,7 @@ label.bold-label{
     position: absolute;
     top: 6px;
     right: 4px;
-    z-index: 9999;
+    z-index: 1;
     color: #c9c9c9;
 }
 
